fixed font blurryness

--- a/css/filter-styles.css
+++ b/css/filter-styles.css
@@ -4,6 +4,7 @@ nav {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 15;
+    font-weight: 400;
 }
 
 nav .drop-btn {
@@ -12,7 +13,7 @@ nav .drop-btn {
     border-radius: 5px;
     line-height: 55px;
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 300;
     color: var(--text-color);
     padding: 0 20px;
     cursor: pointer;
@@ -76,7 +77,7 @@ nav .wrapper.show {
     position: relative;
     color: var(--text-color);
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 400;
     padding: 0 10px;
     display: flex;
     border-radius: 8px;
@@ -121,7 +122,7 @@ ul li a i {
 .wrapper .arrow {
     padding-left: 10px;
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 400;
     color: white;
     cursor: pointer;
 }
