--- a/css/home-styles.css
+++ b/css/home-styles.css
@@ -11,6 +11,11 @@
     margin: 20vh auto 50px auto;
     text-align: center;
     color: var(--text-color);
+    font-weight: 400;
+}
+
+h1 {
+    font-weight: 500;
 }
 
 .my-img {
