--- a/css/navbar-styles.css
+++ b/css/navbar-styles.css
@@ -24,7 +24,7 @@
     text-align: center;
     text-decoration: none;
     color: var(--text-color);
-    font-weight: 700;
+    font-weight: 500;
     margin: 0px 8px;
 }
 
